appId: com.duckduckgo.mobile.android
---
- launchApp:
    clearState: true
- assertVisible:
    text: ".*Not to worry! Searching and browsing privately.*"
- tapOn: "let's do it!"
- tapOn: "cancel"
- assertVisible:
    text: ".*I'll also upgrade the security of your connection if possible.*"
- inputText: "https://www.search-company.site/"
- pressKey: Enter
- assertVisible:
    text: ".*Got It.*"
- tapOn:
    text: "HIDE"
- assertVisible:
    text: "HIDE TIPS FOREVER"
- tapOn:
    text: "HIDE TIPS FOREVER"
- assertVisible:
    id: "ad-id-3"
- action: scroll
- assertVisible:
    id: "ad-id-5"
- tapOn:
    id: "ad-id-5"
- assertVisible:
    text: "Publisher site"
- tapOn:
    id: "com.duckduckgo.mobile.android:id/omnibarIconContainer"
- assertVisible:
    text: "Requests Blocked from Loading"
- tapOn:
    text: "Requests Blocked from Loading"
- assertVisible:
    text: "The following third-party domains’ requests were blocked from loading because they were identified as tracking requests. If a company's requests are loaded, it can allow them to profile you."
- assertVisible:
    text: "About our Web Tracking Protections"
- assertVisible:
    text: ".*Ad Company"
- assertVisible:
    text: "www.ad-company.site"
- action: back
- assertVisible:
    text: "Third-Party Requests Loaded"
- tapOn:
    text: "Third-Party Requests Loaded"
- assertVisible:
    text: "The following third-party domains’ requests were loaded. If a company's requests are loaded, it can allow them to profile you, though our other web tracking protections still apply."
- assertVisible:
    text: "About our Web Tracking Protections"
- assertVisible:
    text: "The following domain’s requests were loaded because a publisher-company.site ad on DuckDuckGo was recently clicked. These requests help evaluate ad effectiveness. All ads on DuckDuckGo are non-profiling."
- assertVisible:
    text: "How our search ads impact our protections"
- assertVisible:
    text: ".*Ad Company"
- assertVisible:
    text: "convert.ad-company.site"
- action: back
- action: back
- assertVisible:
    text: "Publisher site"
- assertVisible:
    text: "Buy now"
- assertVisible:
    id: "buy-now"
- tapOn:
    id: "buy-now"
- assertVisible:
    text: "Pay"
- tapOn:
    id: "com.duckduckgo.mobile.android:id/omnibarIconContainer"
- assertVisible:
    text: "Requests Blocked from Loading"
- tapOn:
    text: "Requests Blocked from Loading"
- assertVisible:
    text: "The following third-party domains’ requests were blocked from loading because they were identified as tracking requests. If a company's requests are loaded, it can allow them to profile you."
- assertVisible:
    text: "About our Web Tracking Protections"
- assertVisible:
    text: ".*Ad Company"
- assertVisible:
    text: "www.ad-company.site"
- action: back
- assertVisible:
    text: "Third-Party Requests Loaded"
- tapOn:
    text: "Third-Party Requests Loaded"
- assertVisible:
    text: "The following third-party domains’ requests were loaded. If a company's requests are loaded, it can allow them to profile you, though our other web tracking protections still apply."
- assertVisible:
    text: "About our Web Tracking Protections"
- assertVisible:
    text: "The following domain’s requests were loaded because a publisher-company.site ad on DuckDuckGo was recently clicked. These requests help evaluate ad effectiveness. All ads on DuckDuckGo are non-profiling."
- assertVisible:
    text: "How our search ads impact our protections"
- assertVisible:
    text: ".*Ad Company"
- assertVisible:
    text: "convert.ad-company.site"
- action: back
- action: back
- tapOn:
    id: "com.android.systemui:id/recent_apps"
- swipe:
    start: 100,500
    end: 100,200
- launchApp:
    clearState: false
- assertVisible:
    text: "Pay"    
- assertVisible:
    id: "pay-button"
- tapOn:
    id: "pay-button"
- assertVisible:
    text: ".*Order complete.*"
- tapOn:
    id: "com.duckduckgo.mobile.android:id/omnibarIconContainer"
- assertVisible:
    text: "Requests Blocked from Loading"
- tapOn:
    text: "Requests Blocked from Loading"
- assertVisible:
    text: "The following third-party domains’ requests were blocked from loading because they were identified as tracking requests. If a company's requests are loaded, it can allow them to profile you."
- assertVisible:
    text: "About our Web Tracking Protections"
- assertVisible:
    text: ".*Ad Company"
- assertVisible:
    text: "www.ad-company.site"
- assertVisible:
    text: "convert.ad-company.site"
- action: back
- assertVisible:
    text: "No Third-Party Requests Found"
- tapOn:
    text: "No Third-Party Requests Found"
- assertVisible:
    text: "We did not identify any requests from third-party domains."
- assertVisible:
    text: "About our Web Tracking Protections"

    

